
noinst_LTLIBRARIES = libaudio.la

libaudio_la_SOURCES =		\
	MPEGaudio.cpp		\
	bitwindow.cpp		\
	filter.cpp		\
	filter_2.cpp		\
	hufftable.cpp	\
	mpeglayer1.cpp		\
	mpeglayer2.cpp		\
	mpeglayer3.cpp		\
	mpegtable.cpp		\
	mpegtoraw.cpp

EXTRA_DIST =			\
	AUTHORS			\
	COPYING.LIB		\
	README			\
	README.LIB
