
noinst_LTLIBRARIES = libvideo.la

libvideo_la_SOURCES =		\
	16bit.cpp		\
	MPEGvideo.cpp		\
	decoders.cpp		\
	decoders.h		\
	dither.h		\
	floatdct.cpp		\
	gdith.cpp		\
	jrevdct.cpp		\
	motionvector.cpp	\
	parseblock.cpp		\
	proto.h			\
	readfile.cpp		\
	util.cpp		\
	util.h			\
	video.cpp		\
	video.h

EXTRA_DIST =			\
	README			\
	COPYRIGHT		\
